<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.earthquakeapp.views.EarthquakeDataDisplayActivity"
    android:background="@color/colorOrange">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_lbl_select_country"
        android:textSize="@dimen/_txt_heading"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        />

    <AutoCompleteTextView
        android:id="@+id/name_of_countries"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/_views_top_margin"
        android:singleLine="true"
        android:background="@color/colorWhite"
        android:padding="2dp"
        android:hint="@string/_edt_countries_hint"
        android:layout_below="@id/textView"
        />
    <TextView
        android:id="@+id/tv_no_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="@dimen/_txt_normal"
        android:textColor="@color/colorWhite"
        android:text="@string/_txt_list_title"
        android:visibility="gone"
        android:layout_below="@id/name_of_countries"
        android:layout_centerInParent="true"
       />

    <ListView
        android:id="@+id/region_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_views_top_margin"
        android:layout_below="@+id/tv_no_data"
        android:clickable="true"
        />

</RelativeLayout>
