...
        <item>Zimbabwe</item>
        <item>Åland Islands</item>
    </string-array>


    <string name="_edt_countries_hint">Type Country Name</string>
    <string name="_txt_no_data_found">NO DATA FOUND</string>
    <string name="_lbl_select_country">Select the country to get Earthquake details:</string>
    <string name="_lbl_country">Country:</string>
    <string name="_lbl_region">Region:</string>
    <string name="_lbl_src">src</string>
    <string name="_lbl_equid">equid</string>
    <string name="_lbl_lat">latitude</string>
...
